# mini-react-native

./: .clang-format  .clangd  .gitignore  .prettierrc.js  CMakeLists.txt  Makefile  README.md  README_CN.md  claude.md  index.js  package.json  pnpm-lock.yaml  rollup.config.js  test_ios.sh
android/: DeviceInfoHelper.java  DeviceInfoModule.cpp  DeviceInfoModule.h
cpp/: JSCExecutor.cpp  JSCExecutor.h  NativeModule.cpp  NativeModule.h
docs/: ENVIRONMENT.md  NOTES.md  PHASE1_PLAN.md  PHASE2_PLAN.md  REACT_NATIVE_BRIDGE_ANALYSIS.md  architecture-guide.md  development-guide.md  iOS_TESTING.md  learning-notes.md  phase1-bridge-plan.md  roadmap.md
examples/: MockModule.h  basic-usage.js  bridge-demo.html  test_basic.cpp  test_deviceinfo.cpp  test_deviceinfo_bundled.cpp  test_integration.cpp  test_ios_deviceinfo.cpp  test_messagequeue.cpp  test_module_framework.cpp
examples/scripts/: test_deviceinfo.js  test_deviceinfo_integration.js  test_messagequeue.js
ios/: DeviceInfoModule.h  DeviceInfoModule.mm
js/: Bridge.js  MessageQueue.js  NativeModules.js
src/bridge/: JSCExecutor.cpp  JSCExecutor.h
src/common/bridge/: JSCExecutor.cpp  JSCExecutor.h
src/common/modules/: DeviceInfoModule.h  ModuleRegistry.cpp  ModuleRegistry.h  NativeModule.cpp  NativeModule.h
src/common/utils/: JSONParser.h
src/ios/modules/deviceinfo/: DeviceInfoModule.mm
src/js/: BatchedBridge.js  DeviceInfo.js  MessageQueue.js  NativeModule.js  console.js  index.js
src/macos/modules/deviceinfo/: DeviceInfoModule.mm
src/modules/: ModuleRegistry.cpp
src/utils/: JSONParser.cpp
